--- a/contrib/systemd/bootcfg.service
+++ b/contrib/systemd/bootcfg.service
@@ -6,7 +6,7 @@ Documentation=https://github.com/coreos/coreos-baremetal
 Type=simple
 User=bootcfg
 Group=bootcfg
-ExecStart=/usr/local/bin/bootcfg -address=0.0.0.0:8080 -log-level=debug
+ExecStart=/usr/local/bin/bootcfg -address=0.0.0.0:8080 -rpc-address=0.0.0.0:8081 -log-level=debug
 
 # systemd.exec
 ProtectHome=yes
